# a11y-dev-helper

./: .gitignore  README.md  pyproject.toml
a11y_dev_helper/: __init__.py  models.py  parser.py  placeholder_client.py  summarizer.py
a11y_dev_helper.egg-info/: PKG-INFO  SOURCES.txt
examples/: example_usage.py
