[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a11y-dev-helper"
version = "0.0.1"
description = "AI-assisted, screen-reader-friendly code structure descriptions for blind and low-vision developers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  # LLM / HTTP clients are intentionally NOT pinned here.
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]